# umr

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
examples/: CMakeLists.txt  ex01_delaunay_triangulation.cpp  ex02_refinement.cpp  ex03_command_line.cpp  ex04.csv  ex04_mesh_density.cpp  ex05_mesh_sources.cpp  ex06_shapes.cpp  ex07_corners.cpp  ex08_inner_source_angles.cpp  ex09_shapes.cpp
ext/: .gitignore  CMakeLists.txt
scripts/: plotter.py  run_examples.sh  run_tests.sh
src/: CMakeLists.txt  builder.cpp  builder.hpp  command_line_interface.cpp  command_line_interface.hpp  delaunay.cpp  delaunay.hpp  density.cpp  density.hpp  edge_queue.cpp  edge_queue.hpp  inequalities.hpp  integration_autogk.cpp  integration_autogk.hpp  integrators.cpp  integrators.hpp  io.cpp  io.hpp  io_json.cpp  io_json.hpp  io_vtk.cpp  io_vtk.hpp  math.cpp  math.hpp  mesh.hpp  mesh_generator.cpp  mesh_generator.hpp  mesh_unstructured.cpp  mesh_unstructured.hpp  mesh_unstructured_constrained.cpp  mesh_unstructured_constrained.hpp  nonlinear_least_squares.cpp  nonlinear_least_squares.hpp  optimizers.cpp  optimizers.hpp  parametrics.hpp  parametrics_arc.cpp  parametrics_arc.hpp  parametrics_general.cpp  parametrics_general.hpp  (+40 more)
tests/: CMakeLists.txt
tests/regression/: .gitignore
tests/regression/src/: ADTN.cpp  ADTN.hpp  CMakeLists.txt  PointN.hpp  common.hpp  validate.cpp  validate.hpp
tests/regression/unstructured_01_bowyer_watson/: gold_standard.json  test.cpp
tests/regression/unstructured_02_divide_and_conquer/: gold_standard.json  test.cpp
tests/regression/unstructured_03_giftwrap/: gold_standard.json  gold_standard_2.json  gold_standard_3.json  test.cpp
tests/regression/unstructured_04_uniform_mesh/: gold_standard.json  test.cpp
tests/regression/unstructured_05_insert_point/: gold_standard_2.json  gold_standard_3.json  gold_standard_4.json  gold_standard_5.json  test.cpp
tests/regression/unstructured_06_insert_edges/: gold_standard_2.json  gold_standard_3.json  test.cpp
tests/regression/unstructured_07_chew_uniform_quad/: gold_standard.json  gold_standard_3.json  test.cpp
tests/regression/unstructured_08_source_points/: gold_standard.json  gold_standard_2.json  test.cpp
tests/regression/unstructured_09_source_lines/: gold_standard.json  gold_standard_2.json  test.cpp
tests/regression/unstructured_10_terminator/: gold_standard.json  gold_standard_1.json  test.cpp
tests/unit/: CMakeLists.txt  common.hpp  inequalities.cpp  integrators.cpp  main.cpp  math.cpp  optimizers_shortest_distance.cpp  optimizers_uniform_splits.cpp  parametrics.cpp  point.cpp  triangle.cpp
